--- a/onboarding-individual.html
+++ b/onboarding-individual.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<script>
+if(!localStorage.getItem("subscription_intent")){
+window.location.href="index.html";
+}
+</script>
+  <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Personal Onboarding | Mark Bennett</title>
 
