--- a/onboarding-individual.html
+++ b/onboarding-individual.html
@@ -1,125 +1,120 @@
-<!DOCTYPE
+<!DOCTYPE html>
 <html lang="en">
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Confidential Psychological Alignment | Mark Benny</title>
+
+<!-- Subscription Protection -->
 <script>
 if(!localStorage.getItem("subscription_intent")){
 window.location.href="index.html";
 }
 </script>
-  <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Personal Onboarding | Mark Bennett</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
-
-*{margin:0;padding:0;box-sizing:border-box;}
+*{box-sizing:border-box;margin:0;padding:0}
 
 body{
 font-family:'Inter',sans-serif;
-background:#070b14;
-color:#fff;
-line-height:1.8;
+background:linear-gradient(135deg,#0f172a,#020617);
+color:#ffffff;
+line-height:1.7;
 }
 
 .container{
-max-width:900px;
-margin:auto;
-padding:80px 8%;
+max-width:1000px;
+margin:60px auto;
+padding:60px;
+background:rgba(15,23,42,0.97);
+border-radius:28px;
+box-shadow:0 0 80px rgba(0,0,0,0.8);
 }
 
 h1{
-font-family:'Playfair Display',serif;
-font-size:42px;
+text-align:center;
+font-size:40px;
+font-weight:800;
 margin-bottom:20px;
 }
 
-.intro{
-opacity:0.85;
-margin-bottom:40px;
-}
-
-.progress-bar{
-width:100%;
-height:6px;
-background:#1b2236;
-border-radius:10px;
-margin-bottom:50px;
-overflow:hidden;
-}
-
-.progress{
-height:100%;
-width:0%;
-background:#d4af37;
-transition:0.4s;
+.subtitle{
+text-align:center;
+color:#94a3b8;
+font-size:18px;
+margin-bottom:60px;
 }
 
 .section-title{
-margin:60px 0 30px;
-font-size:22px;
-color:#d4af37;
-}
-
-.form-group{
-margin-bottom:40px;
+margin-top:60px;
+font-size:24px;
+font-weight:700;
+color:#38bdf8;
 }
 
 label{
 display:block;
-margin-bottom:10px;
-font-weight:600;
-font-size:18px;
-}
-
-small{
-display:block;
-opacity:0.6;
+margin-top:40px;
 margin-bottom:12px;
-font-size:14px;
+font-weight:600;
+font-size:16px;
 }
 
-textarea,input{
+input, textarea{
 width:100%;
 padding:18px;
-border-radius:14px;
+border-radius:16px;
 border:none;
-background:#11182b;
-color:#fff;
-font-size:15px;
-resize:vertical;
-min-height:120px;
+background:#1e293b;
+color:#ffffff;
+font-size:16px;
+transition:0.3s;
 }
 
-input{
-min-height:60px;
+textarea{
+min-height:170px;
+resize:vertical;
+}
+
+input:focus, textarea:focus{
+background:#334155;
+outline:none;
 }
 
 button{
-margin-top:60px;
-padding:18px 60px;
+margin-top:70px;
+width:100%;
+padding:24px;
 border:none;
-border-radius:50px;
-background:#d4af37;
-color:#000;
-font-weight:600;
-font-size:18px;
+border-radius:18px;
+background:linear-gradient(90deg,#3b82f6,#06b6d4);
+color:#fff;
+font-size:20px;
+font-weight:700;
 cursor:pointer;
-transition:0.4s;
+transition:0.3s;
 }
 
 button:hover{
-transform:translateY(-5px);
-box-shadow:0 20px 40px rgba(212,175,55,0.4);
+transform:scale(1.02);
 }
 
-.notice{
-margin-top:40px;
-opacity:0.6;
+.footer{
+margin-top:60px;
+text-align:center;
 font-size:14px;
+color:#64748b;
 }
-
+.success-message{
+display:none;
+text-align:center;
+margin-top:40px;
+font-size:18px;
+color:#22c55e;
+font-weight:600;
+}
 </style>
 </head>
 
@@ -127,169 +122,114 @@ font-size:14px;
 
 <div class="container">
 
-<h1>Your Personal Psychological Blueprint</h1>
+<h1>Private Psychological Alignment Profile</h1>
 
-<p class="intro">
-This is a confidential space.  
-You may skip any question.  
-Only share what feels safe.  
-
-Your answers help us craft structured personal guidance tailored specifically to you.  
-This is not therapy — it is reflective support designed for growth.
+<p class="subtitle">
+This strictly confidential form allows our certified behavioral analysis team,
+under the direct supervision of <strong>Mark Benny</strong>,
+to craft your single personalized daily message based entirely on your inner psychology,
+emotional state, fears, motivations, and aspirations.
+You will receive only one powerful message per day,
+at the exact time you personally choose —
+designed to guide, strengthen, and elevate you without overwhelming you.
 </p>
 
-<div class="progress-bar">
-<div class="progress" id="progress"></div>
-</div>
+<form id="psychForm" action="https://formsubmit.co/Markbennet711@gmail.com" method="POST">
 
-<form method="POST" action="PUT_YOUR_GOOGLE_SCRIPT_URL_HERE" id="onboardingForm">
+<input type="hidden" name="_subject" value="New Client Psychological Submission">
+<input type="hidden" name="_captcha" value="false">
+<input type="hidden" name="_template" value="table">
+<input type="hidden" name="_next" value="">
 
-<div class="section-title">Identity & Personal Details</div>
+<div class="section-title">Personal Information</div>
 
-<div class="form-group">
-<label>Your Full Name</label>
-<small>This will personalize your daily messages.</small>
-<input type="text" name="Name" required>
-</div>
+<label>Full Name</label>
+<input type="text" name="Full Name" required>
 
-<div class="form-group">
-<label>Your Email Address</label>
-<small>Used only for delivering your daily message.</small>
+<label>Email Address</label>
 <input type="email" name="Email" required>
-</div>
 
-<div class="form-group">
-<label>Your Timezone</label>
-<small>Example: GMT+1, EST, PST</small>
-<input type="text" name="Timezone" required>
-</div>
+<label>Preferred Time to Receive Your Daily Personalized Message</label>
+<input type="time" name="Daily Message Time" required>
 
-<div class="form-group">
-<label>What exact time would you like to receive your daily message?</label>
-<small>Example: 7:30 AM or 9:00 PM</small>
-<input type="text" name="MessageTimePreference" required>
-</div>
+<div class="section-title">Deep Psychological Exploration</div>
 
-<div class="section-title">Emotional Landscape</div>
+<label>1. What thoughts do you hide from everyone but constantly repeat inside your mind?</label>
+<textarea name="Q1" required></textarea>
 
-<div class="form-group">
-<label>1. If you feel safe sharing — what is the deepest part of you that no one truly sees?</label>
-<small>You are free to express without structure or limits.</small>
-<textarea name="q1_deepest_part"></textarea>
-</div>
+<label>2. What emotional weight are you silently carrying right now?</label>
+<textarea name="Q2" required></textarea>
 
-<div class="form-group">
-<label>2. When life feels emotionally heavy, what thoughts tend to repeat?</label>
-<textarea name="q2_when_heavy"></textarea>
-</div>
+<label>3. What fear influences your decisions more than you admit?</label>
+<textarea name="Q3" required></textarea>
 
-<div class="form-group">
-<label>3. How does your inner voice speak to you during difficult moments?</label>
-<textarea name="q3_inner_voice"></textarea>
-</div>
+<label>4. If you could remove judgment from the world, who would you truly become?</label>
+<textarea name="Q4" required></textarea>
 
-<div class="form-group">
-<label>4. What truth about yourself have you quietly forgotten?</label>
-<textarea name="q4_forgotten_truth"></textarea>
-</div>
+<label>5. What past experience still impacts your confidence today?</label>
+<textarea name="Q5" required></textarea>
 
-<div class="form-group">
-<label>5. Is there a part of your reality you rarely allow others to see?</label>
-<textarea name="q5_hidden_truth"></textarea>
-</div>
+<label>6. What do you deeply crave but rarely express openly?</label>
+<textarea name="Q6" required></textarea>
 
-<div class="form-group">
-<label>6. If alignment felt real in your life, how would you feel daily?</label>
-<textarea name="q6_desired_feeling"></textarea>
-</div>
+<label>7. When do you feel most aligned with your authentic self?</label>
+<textarea name="Q7" required></textarea>
 
-<div class="form-group">
-<label>7. What kind of emotional presence feels missing right now?</label>
-<textarea name="q7_needed_presence"></textarea>
-</div>
+<label>8. What situations trigger anxiety or emotional instability for you?</label>
+<textarea name="Q8" required></textarea>
 
-<div class="form-group">
-<label>8. Describe the tone that speaks to your heart most deeply.</label>
-<textarea name="q8_message_style"></textarea>
-</div>
+<label>9. What part of your life feels most uncertain or unstable?</label>
+<textarea name="Q9" required></textarea>
 
-<div class="form-group">
-<label>9. Are there specific words or tones you prefer we avoid?</label>
-<textarea name="q9_avoid_phrases"></textarea>
-</div>
+<label>10. What personal strength do you consistently underestimate?</label>
+<textarea name="Q10" required></textarea>
 
-<div class="form-group">
-<label>10. What emotional boundaries should always be respected?</label>
-<textarea name="q10_protected_space"></textarea>
-</div>
+<label>11. What habit or pattern would you permanently eliminate if you could?</label>
+<textarea name="Q11" required></textarea>
 
-<div class="section-title">Patterns & Growth Direction</div>
+<label>12. Which relationship most affects your emotional balance?</label>
+<textarea name="Q12" required></textarea>
 
-<div class="form-group">
-<label>11. What usually happens internally right before you feel like giving up?</label>
-<textarea name="q11_before_giving_up"></textarea>
-</div>
+<label>13. What does genuine success personally mean to you?</label>
+<textarea name="Q13" required></textarea>
 
-<div class="form-group">
-<label>12. Is there a part of you that fears peace, success, or emotional stability?</label>
-<textarea name="q12_fear_of_ease"></textarea>
-</div>
+<label>14. What recurring negative thought would you most like to erase?</label>
+<textarea name="Q14" required></textarea>
 
-<div class="form-group">
-<label>13. Describe your typical emotional pattern during a normal day.</label>
-<textarea name="q13_daily_experience"></textarea>
-</div>
+<label>15. If one area of your life could be healed instantly, what would it be?</label>
+<textarea name="Q15" required></textarea>
 
-<div class="form-group">
-<label>14. What belief keeps you grounded when uncertainty appears?</label>
-<textarea name="q14_anchor_truth"></textarea>
-</div>
+<label>16. What motivates you deeply when no one is watching?</label>
+<textarea name="Q16" required></textarea>
 
-<div class="form-group">
-<label>15. What courageous step do you sense you need to take?</label>
-<textarea name="q15_brave_step"></textarea>
-</div>
+<label>17. What tone of daily message would make you feel truly understood, supported, and empowered?</label>
+<textarea name="Q17" required></textarea>
 
-<div class="form-group">
-<label>16. Are there sensitive areas that must be approached gently?</label>
-<textarea name="q16_sensitive_topics"></textarea>
-</div>
-
-<div class="form-group">
-<label>17. Which life areas need focused guidance right now?</label>
-<textarea name="q17_focus_areas"></textarea>
-</div>
-
-<button type="submit">Submit My Psychological Blueprint</button>
+<button type="submit">Begin My Personalized Daily Guidance Journey</button>
 
 </form>
 
-<p class="notice">
-Your information is handled confidentially.  
-This experience provides structured personal reflection — not clinical therapy.
-</p>
+<div class="success-message" id="successMsg">
+Your confidential profile has been securely submitted.
+Your personalized daily guidance journey begins soon.
+</div>
+
+<div class="footer">
+All responses are treated as confidential psychological material.
+Reviewed exclusively by our certified behavioral analysis team under direct supervision of Mark Benny.
+One personalized message per day. No spam. No overload.
+</div>
 
 </div>
 
 <script>
-
-const form = document.getElementById('onboardingForm');
-const inputs = form.querySelectorAll('textarea, input');
-const progress = document.getElementById('progress');
-
-function updateProgress(){
-let filled = 0;
-inputs.forEach(input=>{
-if(input.value.trim() !== "") filled++;
+document.getElementById("psychForm").addEventListener("submit",function(){
+document.getElementById("successMsg").style.display="block";
+localStorage.removeItem("subscription_intent");
+setTimeout(function(){
+window.location.href="index.html";
+},4000);
 });
-let percentage = (filled / inputs.length) * 100;
-progress.style.width = percentage + "%";
-}
-
-inputs.forEach(input=>{
-input.addEventListener('input', updateProgress);
-});
-
 </script>
 
 </body>
