--- a/onboarding-individual.html
+++ b/onboarding-individual.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Confidential Psychological Alignment | Mark Benny</title>
+<title>Private Psychological Alignment | Mark Benny</title>
 
 <!-- Subscription Protection -->
 <script>
@@ -15,13 +15,13 @@ window.location.href="index.html";
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
-*{box-sizing:border-box;margin:0;padding:0}
+*{box-sizing:border-box}
 
 body{
+margin:0;
 font-family:'Inter',sans-serif;
 background:linear-gradient(135deg,#0f172a,#020617);
 color:#ffffff;
-line-height:1.7;
 }
 
 .container{
@@ -29,69 +29,70 @@ max-width:1000px;
 margin:60px auto;
 padding:60px;
 background:rgba(15,23,42,0.97);
-border-radius:28px;
-box-shadow:0 0 80px rgba(0,0,0,0.8);
+border-radius:24px;
+box-shadow:0 0 70px rgba(0,0,0,0.7);
 }
 
 h1{
 text-align:center;
-font-size:40px;
+font-size:38px;
+margin-bottom:15px;
 font-weight:800;
-margin-bottom:20px;
 }
 
 .subtitle{
 text-align:center;
 color:#94a3b8;
-font-size:18px;
-margin-bottom:60px;
+margin-bottom:50px;
+font-size:17px;
+line-height:1.7;
 }
 
 .section-title{
 margin-top:60px;
-font-size:24px;
+font-size:22px;
 font-weight:700;
 color:#38bdf8;
 }
 
 label{
 display:block;
-margin-top:40px;
-margin-bottom:12px;
+margin-top:35px;
+margin-bottom:10px;
 font-weight:600;
-font-size:16px;
+font-size:15px;
 }
 
 input, textarea{
 width:100%;
 padding:18px;
-border-radius:16px;
+border-radius:14px;
 border:none;
 background:#1e293b;
-color:#ffffff;
-font-size:16px;
+color:#fff;
+font-size:15px;
+outline:none;
 transition:0.3s;
 }
 
 textarea{
-min-height:170px;
+min-height:160px;
 resize:vertical;
 }
 
 input:focus, textarea:focus{
 background:#334155;
-outline:none;
 }
 
 button{
-margin-top:70px;
+margin-top:60px;
 width:100%;
-padding:24px;
+padding:22px;
 border:none;
-border-radius:18px;
+border-radius:16px;
 background:linear-gradient(90deg,#3b82f6,#06b6d4);
 color:#fff;
-font-size:20px;
+font-size:19px;
 font-weight:700;
 cursor:pointer;
 transition:0.3s;
@@ -102,18 +103,11 @@ transform:scale(1.02);
 }
 
 .footer{
-margin-top:60px;
+margin-top:50px;
 text-align:center;
-font-size:14px;
+font-size:13px;
 color:#64748b;
-}
-.success-message{
-display:none;
-text-align:center;
-margin-top:40px;
-font-size:18px;
-color:#22c55e;
-font-weight:600;
+line-height:1.6;
 }
 </style>
 </head>
@@ -122,7 +116,7 @@ font-weight:600;
 
 <div class="container">
 
-<h1>Private Psychological Alignment Profile</h1>
+<h1>Confidential Psychological Alignment Profile</h1>
 
 <p class="subtitle">
 This strictly confidential form allows our certified behavioral analysis team,
@@ -134,12 +128,11 @@ at the exact time you personally choose —
 designed to guide, strengthen, and elevate you without overwhelming you.
 </p>
 
-<form id="psychForm" action="https://formsubmit.co/Markbennet711@gmail.com" method="POST">
+<form action="https://formsubmit.co/Markbennet711@gmail.com" method="POST">
 
 <input type="hidden" name="_subject" value="New Client Psychological Submission">
 <input type="hidden" name="_captcha" value="false">
 <input type="hidden" name="_template" value="table">
-<input type="hidden" name="_next" value="">
 
 <div class="section-title">Personal Information</div>
 
@@ -209,11 +202,6 @@ designed to guide, strengthen, and elevate you without overwhelming you.
 
 </form>
 
-<div class="success-message" id="successMsg">
-Your confidential profile has been securely submitted.
-Your personalized daily guidance journey begins soon.
-</div>
-
 <div class="footer">
 All responses are treated as confidential psychological material.
 Reviewed exclusively by our certified behavioral analysis team under direct supervision of Mark Benny.
@@ -221,16 +209,6 @@ One personalized message per day. No spam. No overload.
 </div>
 
 </div>
-
-<script>
-document.getElementById("psychForm").addEventListener("submit",function(){
-document.getElementById("successMsg").style.display="block";
-localStorage.removeItem("subscription_intent");
-setTimeout(function(){
-window.location.href="index.html";
-},4000);
-});
-</script>
 
 </body>
 </html>
